<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/reminder_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/general_spacing"
        android:text="@string/reminders_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dosage_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/general_spacing"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckBoxClicked"
        android:text="@string/notifications"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/calendar_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckBoxClicked"
        android:text="@string/calendar_events"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/editTimesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onEditTimes"
        android:text="@string/edit_times" />
    
    <Button
        android:id="@+id/applyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onApply"
        android:text="@string/apply" />

</LinearLayout>