<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/general_spacing" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="3" >

            <com.snapmeds.LoaderImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/detail_prescription_image_description" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/general_spacing"
                android:text="@string/detail_prescription_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/note"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile"
                    android:layout_toLeftOf="@+id/prescription_note_edit"
                    android:hint="@string/detail_prescription_note_hint" />

                <Button
                    android:id="@id/prescription_note_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/note"
                    android:layout_alignParentRight="true"
                    android:text="@string/detail_prescription_note_edit" />

                <TextView
                    android:id="@+id/dosageTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/note" />

                <TextView
                    android:id="@+id/dosageText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dosageTextTitle"
                    android:layout_toLeftOf="@+id/dosageEdit" />

                <Button
                    android:id="@+id/dosageEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/dosageText"
                    android:onClick="onDosageEdit"
                    android:text="@string/dosage_edit" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_information_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dosageEdit"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

</ScrollView>